<resources>
    <string name="app_name">Mi Alojamiento SV</string>
    <string name="explorar">Explorar</string>
    <string name="mapa">Mapa</string>
    <string name="perfil">Perfil</string>
    <string name="favoritos">Favoritos</string>
    <string name="mensajes">Mensajes</string>

    <!--Perfil-->
    <string name="tituloPerfil">Perfil</string>
    <string name="nombrePerfil">Nombre</string>
    <string name="generoPerfil">Género</string>
    <string name="emailPerfil">Email</string>

    <!--Chat-->
    <string name="tituloChat">Contactos</string>
    <string name="nombreChat">Nombre Hotel</string>

    <!--Login y registro-->
    <string name="tituloLogin">INICIAR SESION</string>
    <string name="tituloRegistro">REGISTRAR CUENTA</string>
    <string name="usuarioLogin">Email</string>
    <string name="passwordLogin">Password</string>
    <string name="botonRegistrarse">Registrarse</string>
    <string name="botonIniciar">Ingresar</string>
    <string name="ingresarGoogle">Ingresar con Google</string>
    <string name="failInicio">Su correo y contraseña no son válidos. Intente nuevamente</string>
    <string name="salir">Cerrar sesión</string>
    <string name="ok">OK</string>

    <string name="hotel_title">Titulo de Hotel</string>
    <string name="hotel_description">Description Hotel</string>
    <string name="hotel_valoraciones">Evaluacion</string>
    <string name="hotel_address">Direccion de el hotel</string>
    <string name="noti">Notificaciones</string>

    <!--Mapa en Hotel-->
    <string name="teencontraras">Dónde estaras</string>

    <!--Activity Map-->
    <string name="hotelActivity">Tu ubicación</string>

    <!--Activity favoritos-->
    <string name="favActivity">Tus hoteles favoritos</string>

    <!--Activity Inicio -->
    <string name="hotelescercanos">Hoteles cercanos a Ti</string>

</resources>