<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_white"
    tools:context=".ui.view.HotelActivity">

    <TextView
        android:id="@+id/tvHotel_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/hotel_title" />

    <TextView
        android:id="@+id/tvHotel_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/hotel_description" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/hotel_address" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationFavoriteHotel"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_weight="1"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/favoriteheart" />

</LinearLayout>