<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:layout_gravity="center"
tools:context=".ui.view.RegistroActivity"
android:background="#D0ECE7">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="30dp"
    android:layout_weight="1">


    <TextView
        android:id="@+id/textView_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:text="@string/tituloRegistro"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:startIconDrawable="@drawable/ic_nombre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/nombrePerfil">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditNombrePerfil"
            android:inputType="text"
            android:maxLength="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        app:startIconDrawable="@drawable/ic_genero"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/generoPerfil">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditGeneroPerfil"
            android:inputType="text"
            android:maxLength="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        app:startIconDrawable="@drawable/ic_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/usuarioLogin">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditUsuarioLogin"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:startIconDrawable="@drawable/ic_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/passwordLogin">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditPasswordLogin"
            android:inputType="textPassword"
            android:maxLength="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonResgistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonRegistrarse"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:backgroundTint="#138D75" />
</LinearLayout>
</ScrollView>