<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".homeLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/textView_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="@string/tituloLogin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:startIconDrawable="@drawable/ic_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/usuarioLogin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditUsuarioLogin"
                android:inputType="text"
                android:maxLength="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:startIconDrawable="@drawable/ic_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/passwordLogin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditPasswordLogin"
                android:inputType="text"
                android:maxLength="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/linearLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:gravity="right">
            <Button
                android:id="@+id/botonResgistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/botonRegistrarse"
                android:layout_marginRight="25dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/botones" />
            <Button
                android:id="@+id/botonIniciar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/botonIniciar"
                android:textColor="@color/black"
                android:backgroundTint="@color/botones" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>