<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0ECE7"
    tools:context=".ui.view.PerfilActivity">

    <RelativeLayout
        android:id="@+id/seccion"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#34495E"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TituloChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloPerfil"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/seccion"
        android:orientation="vertical"
        tools:context=".ui.view.PerfilActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_usuario" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/nombrePerfil"
                app:startIconDrawable="@drawable/ic_nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditNombrePerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text"
                    android:longClickable="false"
                    android:maxLength="50" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/generoPerfil"
                app:startIconDrawable="@drawable/ic_genero">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditGeneroPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text"
                    android:longClickable="false"
                    android:maxLength="50" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/emailPerfil"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditEmailPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text"
                    android:longClickable="false"
                    android:maxLength="50" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/botonCerrarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="#138D75"
                android:text="@string/salir"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/round_corner"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/my_navigation_items" />
</RelativeLayout>